--- a/standard-cleaning.html
+++ b/standard-cleaning.html
@@ -290,15 +290,32 @@
             <!-- Phone -->
             <div>
               <label class="block text-sm font-medium text-white/80">Phone</label>
-              <input type="tel" name="phone" inputmode="tel" autocomplete="tel"
+              <input
+                id="phone"
+                type="tel"
+                name="phone"
+                inputmode="tel"
+                autocomplete="tel"
+                required
+                pattern="^\(\d{3}\)\s\d{3}-\d{4}$"
+                title="Enter a phone number like (317) 555-0123"
                 class="mt-2 block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
-                       focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400">
+                       focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
+                placeholder="(xxx) xxx-xxxx">
             </div>
 
             <!-- Email -->
             <div>
               <label class="block text-sm font-medium text-white/80">Email</label>
-              <input type="email" name="email" required
+              <input
+                id="email"
+                type="email"
+                name="email"
+                required
+                inputmode="email"
+                autocomplete="email"
+                pattern="^[^\s@]+@[^\s@]+\.[^\s@]{2,}$"
+                title="Enter a valid email like name@example.com"
                 class="mt-2 block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
                        focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400">
             </div>
@@ -325,7 +342,12 @@
                   class="block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
                          focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
                   placeholder="Carmel, Fishers, Greenwood, etc.">
-                <input type="text" name="zip" required
+                <input
+                  type="text"
+                  name="zip"
+                  required
+                  pattern="^\d{5}(-\d{4})?$"
+                  title="Enter a ZIP like 46032 or 46032-1234"
                   class="block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
                          focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
                   placeholder="ZIP">
@@ -413,9 +435,35 @@
 
     pickInputs.forEach(i => i.addEventListener('change', updateSelected));
     updateSelected();
+
+    // Phone auto-format to (xxx) xxx-xxxx
+    const phone = document.getElementById('phone');
+
+    function formatPhoneUS(value) {
+      const digits = (value || '').replace(/\D/g, '').slice(0, 10);
+      const a = digits.slice(0, 3);
+      const b = digits.slice(3, 6);
+      const c = digits.slice(6, 10);
+
+      if (digits.length <= 3) return a ? `(${a}` : '';
+      if (digits.length <= 6) return `(${a}) ${b}`;
+      return `(${a}) ${b}-${c}`;
+    }
+
+    phone.addEventListener('input', (e) => {
+      const formatted = formatPhoneUS(e.target.value);
+      e.target.value = formatted;
+    });
+
+    // Extra: on blur, enforce full format if they typed 10 digits without symbols
+    phone.addEventListener('blur', (e) => {
+      const digits = (e.target.value || '').replace(/\D/g, '');
+      if (digits.length === 10) e.target.value = formatPhoneUS(digits);
+    });
   </script>
 
 </body>
 </html>
+
 
 
